--- a/public/style/nav_expand.css
+++ b/public/style/nav_expand.css
@@ -55,10 +55,11 @@
         position: relative;
         display: flex; flex-direction: column;
         height: 100%; width: auto;
-        margin: 10px; padding: 10px;
+        margin: 30px; padding: 20px;
         align-items: center; justify-content: center;
         cursor: pointer;
         user-select: none;
+        scale: 1;
     }
 }
 
